--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "dmstr/yii2-adminlte-asset": "^2.1",
         "yiisoft/yii2-authclient": "~2.1.0",
         "2amigos/qrcode-library": "~1.1",
-        "saviorlv/yii2-dysms": "dev-master"
+        "saviorlv/yii2-dysms": "dev-master",
+        "kartik-v/yii2-widgets": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
