--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,14 @@
 {
-    "name": "yiisoft/yii2-app-advanced",
-    "description": "Yii 2 Advanced Project Template",
+    "name": "bluehe/app-basic",
+    "description": "APP Basic Project Template",
     "keywords": ["yii2", "framework", "advanced", "project template"],
-    "homepage": "http://www.yiiframework.com/",
+    "homepage": "http://www.wzgxpt.com/",
     "type": "project",
     "license": "BSD-3-Clause",
     "support": {
-        "issues": "https://github.com/yiisoft/yii2/issues?state=open",
-        "forum": "http://www.yiiframework.com/forum/",
-        "wiki": "http://www.yiiframework.com/wiki/",
-        "irc": "irc://irc.freenode.net/yii",
-        "source": "https://github.com/yiisoft/yii2"
+        "issues": "https://github.com/bluehe/app-basic/issues?state=open",
+        "forum": "http://www.wzgxpt.com/",
+        "source": "https://github.com/bluehe/app-basic"
     },
     "minimum-stability": "stable",
     "require": {
@@ -45,6 +43,10 @@
         {
             "type": "composer",
             "url": "https://packagist.phpcomposer.com"
+        },
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
         }
     ]
 }
