--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "yiisoft/yii2-imagine": "^2.1",
         "bluehe/yii2-jcrop": "dev-master",
         "yiidoc/yii2-redactor": "*",
-        "feehi/yii2-cdn": "^0.0.3"
+        "feehi/yii2-cdn": "^0.0.3",
+        "kartik-v/yii2-date-range": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
