--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "feehi/yii2-cdn": "^0.0.3",
         "kartik-v/yii2-date-range": "dev-master",
         "phpoffice/phpexcel": "*",
-        "miloschuman/yii2-highcharts-widget": "v5.0.2"
+        "miloschuman/yii2-highcharts-widget": "v5.0.2",
+        "daixianceng/yii2-echarts": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
